유틸/예제 클래스 및 프로파일 정리
* @UtilityClass 적용
* Java conventions 적용
* server.compression 적용